# avular_origin_simulation

./: .gitignore  .gitmodules  LICENSE  README.md
.github/: CODEOWNERS
cmd_vel_controller/: cmd-vel-controller_1.7.1_amd64.deb  cmd-vel-controller_1.7.2_amd64.deb  cmd_vel_controller-1.7.1-Linux.deb  loggercxx-3.0.0-Linux.deb  loggercxx_3.0.0_amd64.deb  loggercxx_3.3.0_amd64.deb  origin-msgs_1.0.0_amd64.deb  origin-msgs_2.3.0_amd64.deb  origin_msgs-1.0.0-Linux.deb  rclcpp-avular_3.0.0_amd64.deb  rclcpp-avular_3.3.0_amd64.deb  rclcpp-mocks_3.3.1_amd64.deb  rclcpp_avular-3.0.0-Linux.deb
origin_one_gazebo/: LICENSE  package.xml  setup.cfg  setup.py
origin_one_gazebo/config/: cmd_vel_controller.yaml  gazebo_ros_bridge_topics.yaml
origin_one_gazebo/launch/: origin_sim_common.launch.py  ty_test_area.launch.py
origin_one_gazebo/models/TY_test_area/: model.config
origin_one_gazebo/models/aruco_marker/: model.config  model.sdf
origin_one_gazebo/models/aruco_marker/materials/scripts/: marker.material
origin_one_gazebo/models/avular_logo/: model.config  model.sdf
origin_one_gazebo/models/avular_logo/materials/scripts/: avular_logo.material
origin_one_gazebo/worlds/: TY_test_area.world
src/origin_v10_gazebo/: LICENSE  package.xml  setup.cfg  setup.py
src/origin_v10_gazebo/launch/: origin_sim_common.launch.py  ty_test_area.launch.py
src/origin_v10_gazebo/models/TY_test_area/: model.sdf
src/origin_v10_gazebo/origin_v10_gazebo/: origin_specifics.py
