<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>origin_v10_gazebo</name>
  <version>0.0.0</version>
  <description> Gazebo simulation models for the Avular Origin V1.0 </description>
  <maintainer email="j.sijs@avular.com">Joris Sijs</maintainer>
  <maintainer email="t.smagt@avular.com">Tijs van der Smagt</maintainer>
  <maintainer email="b.hendrikx@avular.com">Bob Hendrikx</maintainer>
  <license> proprietary </license>

  <depend>cmd_vel_controller</depend>
  <depend>origin_v10_description</depend>
  <depend>ros_gz_sim</depend>
  <depend>ros_gz_bridge</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_srvs</depend>
  <depend>tf2_ros</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
